ARROW-6704: [C++] Check for out of bounds timestamp in unsafe cast